--- a/Desktop/coder house/paginaspartials/_footer.scss
+++ b/Desktop/coder house/paginaspartials/_footer.scss
@@ -1,5 +1,3 @@
-@media only screen and (max-width:599px) {
-    
 .piePagina{
     width: 100%;
     background-color:rgb(182, 253, 180);
@@ -55,4 +53,12 @@
         &:hover{
         background-color: #00ffff;}
       }
-}
+      @media only screen and (max-width:599px){
+        .grupoUno{
+          width: 90%;
+          grid-template-columns: repeat(1, 1fr);
+          grid-gap: 30px;
+          padding: 35px 0px; }
+
+
+      }
